# AdventOfCode

./: .gitignore  CMakeLists.txt  day1-1.c  day1-2.c  day10-1.c  day10-2.c  day11-1.c  day12-2.c  day2-1.c  day2-2.c  day3-1.c  day3-2.c  day4-1.c  day5-2.c  day6-2.c  day7-1.c  day7-2.c  util.c  util.h
2015/: CMakeLists.txt  day1-2.c  day11-2.c  day12-2.c  day2-1.c  day2-2.c  day22-1.c  day22-2.c  day4-1.c  day4-2.c  day5-1.c  day6-1.c  day8-1.c  day8-2.c  day9-1.c  day9-2.c
2015/util/: charPairCache.c  charPairCache.h  circuit.h  gameState.c  gameState.h  lightGrid.h  linkedList.c  positionVisistedList.c
2016/Day1/: Day1  mix.exs
2016/Day1/_build/dev/lib/Day1/: .compile.elixir
2016/Day1/_build/dev/lib/Day1/ebin/: Elixir.Day1.beam
2016/Day1/lib/: day1.ex
2016/Day2/: mix.exs
2016/Day2/lib/: day2.ex
2016/Day3/: mix.exs
2016/Day3/lib/: day3.ex
2016/Day4/: mix.exs
2016/Day4/lib/: day4.ex
2017/src/: day1.py  day10.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2018/: CMakeLists.txt  day-1-1.cpp  day-1-2.cpp  day-2-1.cpp  day-2-2.cpp
util/: charPairCache.c  circuit.c  circuit.h  general.c  general.h  lightGrid.c  linkedList.c  linkedList.h  positionVisistedList.c  positionVisistedList.h  present.c  present.h
