cmake_minimum_required(VERSION 3.3)
project(AdventOfCodeC)

add_executable(day1-1 day1-1.c util/general.c)
add_executable(day1-2 day1-2.c util/general.c)
add_executable(day2-1 day2-1.c util/general.c util/present.c)
add_executable(day2-2 day2-2.c util/general.c util/present.c)
add_executable(day3-1 day3-1.c util/general.c)